Save progress up to 'Some random information' section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="hero">
             <h1>Kickstart your learning!</h1>
-            <div class="hero-text">Want to start building? <em>The Odin Project</em> will kickstart your learning and take you from <em>ZERO</em> to <strong>HERO!</strong></div>
+            <div class="hero-text">Want to start building? <em>The Odin Project</em> will kickstart your learning and take you from <em>ZERO</em> to <strong>HERO!</strong> Work at your own pace and everything is free. What are you waiting for? Click the 'Sign up' button below and I'll see in <a class="discord" href="https://discord.gg/theodinproject"><strong>Discord!</strong></a></div>
             <a href="https://www.theodinproject.com/sign_up" class="button">Sign up</a>
         </div>
     </div>
@@ -30,22 +30,29 @@
     <div class="information">
         <h2>What does The Odin Project offer?</h2>
         <ul>
-            <li>
-                <img src="img/html.png" alt="html">
-                HTML
-            </li>
-            <li>
-                <img src="img/css.png">CSS
-            </li>
-                <img src="img/github.png">Github
-            <li>
-                <img src="img/discord.png">
-                Discord
-            </li>
+            <div class="info">
+                <img src="img/html.png" alt="html logo">
+                <div class="info-text"><strong>HTML</strong> - You'll literally learn the <em>building blocks</em> of web development and you start from the beginning. You'll be able to make a boilerplate on day 1!
+                </div>
+            </div>
 
-            <li>
+            <div class="info">
+                <img src="img/css.png" alt="css logo">
+                <div class="info-text"><strong>CSS</strong> - It may be hard to believe, but this website was built using only Flexbox! Follow the curriculum and you'll be able to make something like this very soon!
+                </div>
+            </div>
 
-            </li>
+            
+            <div class="info">
+                <img src="img/github.png" alt="github logo">
+                <div class="info-text"><strong>GitHub</strong> - TOP will teach you how to use the best VCS in the game. Making commits will no longer be a chore, but a blessing! Start building your repository today!
+                </div>
+            </div>
+            <div class="info">
+                <img src="img/discord.png" alt="discord logo">
+                <div class="info-text"><strong>Discord</strong> - Have access to a community full of learners (and experts) willing to help. A passionate open source community is what makes TOP!
+                </div>
+            </div>
         </ul>
 
 
