Update after completing first full-attempt

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
             <a href="https://www.theodinproject.com/sign_up" class="button">Sign up</a>
         </div>
     </div>
-
     <div class="information">
         <h2>What does The Odin Project offer?</h2>
         <ul>
@@ -58,11 +57,29 @@
 
 
     </div>
+    <div class="quote-section">
+        <div class="quote">
+            <em>When I was a child, I spoke as a child, I understood as a child, I thought as a child: but when I became a man, I put away childish things.</em>
+        </div>
+        <div class="quoted"><strong>- 1 Corinthians 13:11</strong></div>
 
-    
-
-
-
+    </div>
+    <div class="action">
+        <div class="bluebox">
+            <div class="left">
+                <p class="time">
+                    <strong>Call to action! It's time!</strong> <br>
+                    Sign up for the program by clicking that button right over there!
+                </p>
+            </div>
+            <div class="right">
+                <a href="https://www.theodinproject.com/sign_up" class="button">Sign up</a>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        Copyright ® The Odin Project 2021
+    </div>
 
 
 
