Update broken links

--- a/index.html
+++ b/index.html
@@ -34,14 +34,11 @@
                 <div class="info-text"><strong>HTML</strong> - You'll literally learn the <em>building blocks</em> of web development and you start from the beginning. You'll be able to make a boilerplate on day 1!
                 </div>
             </div>
-
             <div class="info">
                 <img src="img/css.png" alt="css logo">
                 <div class="info-text"><strong>CSS</strong> - It may be hard to believe, but this website was built using only Flexbox! Follow the curriculum and you'll be able to make something like this very soon!
                 </div>
             </div>
-
-            
             <div class="info">
                 <img src="img/github.png" alt="github logo">
                 <div class="info-text"><strong>GitHub</strong> - TOP will teach you how to use the best VCS in the game. Making commits will no longer be a chore, but a blessing! Start building your repository today!
@@ -53,16 +50,12 @@
                 </div>
             </div>
         </ul>
-
-
-
     </div>
     <div class="quote-section">
         <div class="quote">
             <em>When I was a child, I spoke as a child, I understood as a child, I thought as a child: but when I became a man, I put away childish things.</em>
         </div>
         <div class="quoted"><strong>- 1 Corinthians 13:11</strong></div>
-
     </div>
     <div class="action">
         <div class="bluebox">
@@ -73,16 +66,12 @@
                 </p>
             </div>
             <div class="right">
-                <a href="https://www.theodinproject.com/sign_up" class="button">Sign up</a>
+                <a href="https://discord.gg/theodinproject" class="button">Sign up</a>
             </div>
         </div>
     </div>
     <div class="footer">
         Copyright ® The Odin Project 2021
     </div>
-
-
-
-
 </body>
 </html>
